Adicionando schema e routes de Answers
